--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "~12.1.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.0.2",
-    "firebase": "^7.0 || ^8.0",
+    "firebase": "^8.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
